Fix bootstrap layout issues, see #610
Fixing that issue revealed a whole mess of others, so I fixed
those as well.

--- a/client/styles/build.less
+++ b/client/styles/build.less
@@ -40,20 +40,8 @@
 /** job view styling **/
 
 body.job_view .body-content {
-  top: 40px;
-  left: 20px;
-  right: 20px;
-  bottom: 0px;
   min-height: 300px;
   overflow: visible;
-  position: absolute;
-}
-
-body.job_view .job-left-col,
-body.job_view .job-detail-sidebar {
-  position: absolute;
-  top: 30px;
-  bottom: 10px;
 }
 
 .job-pre-console {
@@ -213,12 +201,6 @@ body.job_view footer {
   pre.console-output {
     position: static;
     max-height: 500px; 
-  }
-  body.job_view .job-left-col,
-  body.job_view #list-of-builds,
-  body.job_view .job-detail-sidebar,
-  body.job_view .body-content {
-    position: static;
   }
   body.job_view #build-metadata .span3 {
     display: inline-block;
